添加redis缓存优化秒杀url暴露接口

--- a/pom.xml
+++ b/pom.xml
@@ -237,6 +237,26 @@
       <version>${slf4j.version}</version>
     </dependency>
 
+    <!--添加java访问redis客户端jedis-->
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+
+    <!--protostuff 开源序列化工具-->
+    <dependency>
+      <groupId>io.protostuff</groupId>
+      <artifactId>protostuff-core</artifactId>
+      <version>1.5.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.protostuff</groupId>
+      <artifactId>protostuff-runtime</artifactId>
+      <version>1.5.2</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>seckill</finalName>
